DAY-31 (CAPSTONE)/CAPSTONE-PROJECT/k8s/sandbox-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-service
spec:
  type: ClusterIP
  selector:
    app: sandbox
  ports:
    - name: main-port
      port: 80
      targetPort: 3000
